# Krishna_Vaani

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/config/: settings.py
src/generation/: __init__.py  generator.py  prompts.py
src/indexing/: __init__.py  vector_store.py
src/ingestion/: __init__.py  chunker.py  parser.py
src/retrieval/: __init__.py  hybrid.py  reranker.py
