[project]
name = "krishna_vaani"
version = "0.1.0"
description = "A production-grade, top 1% RAG system for the Bhagavad Gita using LangChain, FAISS, and Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "streamlit>=1.32.0",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-text-splitters>=0.3.6",
    "faiss-cpu>=1.8.0",
    "fastembed>=0.5.1",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pypdf>=4.1.0",
    "pymupdf>=1.23.26",
    "pytest>=8.0.0",
    "jinja2>=3.1.3",
    "flashrank>=0.2.10",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

